chore: update rebase conflict check in workflows to use --autostash option

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -47,7 +47,7 @@ workflows:
           
           # Check for rebase conflicts before running analysis
           echo "🔄 Checking for rebase conflicts..."
-          if ! git rebase origin/$TARGET_BRANCH; then
+          if ! git rebase --autostash origin/$TARGET_BRANCH; then
             echo "❌ Rebase failed due to conflicts!"
             # Detect conflicting files
             CONFLICTED_FILES=$(git diff --name-only --diff-filter=U 2>/dev/null || git status --short 2>/dev/null | grep -E "^(UU|AA|DD|AU|UA|DU|UD)" | awk '{print $2}' || git ls-files -u 2>/dev/null | awk '{print $4}' | sort -u || echo "Unable to determine")
@@ -240,7 +240,7 @@ workflows:
           
           # Check for rebase conflicts before running analysis
           echo "🔄 Checking for rebase conflicts..."
-          if ! git rebase origin/$TARGET_BRANCH; then
+          if ! git rebase --autostash origin/$TARGET_BRANCH; then
             echo "❌ Rebase failed due to conflicts!"
             # Detect conflicting files
             CONFLICTED_FILES=$(git diff --name-only --diff-filter=U 2>/dev/null || git status --short 2>/dev/null | grep -E "^(UU|AA|DD|AU|UA|DU|UD)" | awk '{print $2}' || git ls-files -u 2>/dev/null | awk '{print $4}' | sort -u || echo "Unable to determine")
