--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -50,7 +50,7 @@ workflows:
           if ! git rebase --autostash origin/$TARGET_BRANCH; then
             echo "❌ Rebase failed due to conflicts!"
             # Detect conflicting files
-            CONFLICTED_FILES=$(git diff --name-only --diff-filter=U 2>/dev/null || git status --short 2>/dev/null | grep -E "^(UU|AA|DD|AU|UA|DU|UD)" | awk '{print $2}' || git ls-files -u 2>/dev/null | awk '{print $4}' | sort -u || echo "Unable to determine")
+            CONFLICTED_FILES=$(git diff --name-only --diff-filter=U 2>/dev/null || git ls-files -u | awk '{print $4}' | sort -u || echo "Unable to determine")
             if [ -n "$CONFLICTED_FILES" ] && [ "$CONFLICTED_FILES" != "Unable to determine" ]; then
               echo "Conflicting files:"
               echo "$CONFLICTED_FILES"
@@ -243,7 +243,7 @@ workflows:
           if ! git rebase --autostash origin/$TARGET_BRANCH; then
             echo "❌ Rebase failed due to conflicts!"
             # Detect conflicting files
-            CONFLICTED_FILES=$(git diff --name-only --diff-filter=U 2>/dev/null || git status --short 2>/dev/null | grep -E "^(UU|AA|DD|AU|UA|DU|UD)" | awk '{print $2}' || git ls-files -u 2>/dev/null | awk '{print $4}' | sort -u || echo "Unable to determine")
+            CONFLICTED_FILES=$(git diff --name-only --diff-filter=U 2>/dev/null || git ls-files -u | awk '{print $4}' | sort -u || echo "Unable to determine")
             if [ -n "$CONFLICTED_FILES" ] && [ "$CONFLICTED_FILES" != "Unable to determine" ]; then
               echo "Conflicting files:"
               echo "$CONFLICTED_FILES"
