--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -41,52 +41,8 @@ workflows:
           export PATH="$PATH":"$HOME/.pub-cache/bin":"$FCI_BUILD_DIR/.fvm/flutter_sdk/bin"
           echo "Linux version: $(uname -a)"
           echo "Triggered By: $CM_BUILD_STARTED_BY"
-          echo "🛠️ Running Flutter analysis..."
-          TARGET_BRANCH=${CM_PULL_REQUEST_DEST:-main}
-          git fetch origin "$TARGET_BRANCH:refs/remotes/origin/$TARGET_BRANCH"
-          
-          # Check for rebase conflicts before running analysis
-          echo "🔄 Checking for rebase conflicts..."
-          if ! git rebase --autostash origin/$TARGET_BRANCH; then
-            echo "❌ Rebase failed due to conflicts!"
-            # Detect conflicting files
-            CONFLICTED_FILES=$(git diff --name-only --diff-filter=U 2>/dev/null || git ls-files -u | awk '{print $4}' | sort -u || echo "Unable to determine")
-            if [ -n "$CONFLICTED_FILES" ] && [ "$CONFLICTED_FILES" != "Unable to determine" ]; then
-              echo "Conflicting files:"
-              echo "$CONFLICTED_FILES"
-            else
-              echo "Unable to determine specific conflicting files, but rebase failed."
-            fi
-            git rebase --abort
-            exit 1
-          fi
-          echo "✅ Rebase successful, no conflicts detected"
-          
-          # After successful rebase, find delta files from rebased HEAD
-          BASE_COMMIT=origin/$TARGET_BRANCH
-
-          # Identify changed Dart files (lib/ and test/) - comparing rebased HEAD to target branch
-          CHANGED_DART_FILES=$(git diff --name-only  --diff-filter=d $BASE_COMMIT HEAD -- "lib/*.dart" "test/*.dart")
-
-          if [ -z "$CHANGED_DART_FILES" ]; then
-            echo "✅ No Dart files modified. Skipping analysis."
-            exit 0
-          fi
-          echo "🛠️ Analyzing changed files:"
-          echo "$CHANGED_DART_FILES"
-          fvm flutter analyze --fatal-infos --fatal-warnings $CHANGED_DART_FILES
-          
-          # Filter out generated files (matching analysis_options.yaml exclusions)
-          FILTERED_FILES=$(echo "$CHANGED_DART_FILES" | grep -v -E "(lib/generated/|\.g\.dart$|\.freezed\.dart$|lib/l10n/generated/)")
-          
-          # Run custom linter on filtered files (excluding generated files)
-          if [ -z "$FILTERED_FILES" ]; then
-            echo "✅ No non-generated Dart files changed, skipping custom linter"
-          else
-            echo "🔍 Running custom linter (ripplearc_linter rules) on changed files..."
-            ALL_RULES="prefer_fake_over_mock,forbid_forced_unwrapping,no_optional_operators_in_tests,document_fake_parameters,document_interface,todo_with_story_links,no_internal_method_docs,specific_exception_types,avoid_test_timeouts,private_subject,sealed_over_dynamic"
-            fvm dart run ripplearc_linter:standalone_checker --rules $ALL_RULES $FILTERED_FILES
-          fi
+          chmod +x scripts/ci/run_code_analysis.sh
+          ./scripts/ci/run_code_analysis.sh "${CM_PULL_REQUEST_DEST:-main}" --delta
 
       - name: Run Unit Tests With Coverage
         script: |
@@ -233,48 +189,8 @@ workflows:
       - name: Run Code Analysis
         script: |
           export PATH="$PATH":"$HOME/.pub-cache/bin":"$FCI_BUILD_DIR/.fvm/flutter_sdk/bin"
-          echo "🛠️ Running Flutter analysis..."
-          
-          TARGET_BRANCH=${CM_PULL_REQUEST_DEST:-main}
-          git fetch origin "$TARGET_BRANCH:refs/remotes/origin/$TARGET_BRANCH"
-          
-          # Check for rebase conflicts before running analysis
-          echo "🔄 Checking for rebase conflicts..."
-          if ! git rebase --autostash origin/$TARGET_BRANCH; then
-            echo "❌ Rebase failed due to conflicts!"
-            # Detect conflicting files
-            CONFLICTED_FILES=$(git diff --name-only --diff-filter=U 2>/dev/null || git ls-files -u | awk '{print $4}' | sort -u || echo "Unable to determine")
-            if [ -n "$CONFLICTED_FILES" ] && [ "$CONFLICTED_FILES" != "Unable to determine" ]; then
-              echo "Conflicting files:"
-              echo "$CONFLICTED_FILES"
-            else
-              echo "Unable to determine specific conflicting files, but rebase failed."
-            fi
-            git rebase --abort
-            exit 1
-          fi
-          echo "✅ Rebase successful, no conflicts detected"
-          
-          # Run Flutter analysis on rebased codebase
-          fvm flutter analyze --fatal-infos --fatal-warnings .
-          
-          # After successful rebase, find delta files from rebased HEAD
-          BASE_COMMIT=origin/$TARGET_BRANCH
-
-          # Get committed changed files (compared to base commit) for custom_lint only
-          CHANGED_DART_FILES=$(git diff --name-only --diff-filter=d "$BASE_COMMIT" HEAD -- "lib/*.dart" "test/*.dart")
-          
-          # Filter out generated files (matching analysis_options.yaml exclusions)
-          FILTERED_FILES=$(echo "$CHANGED_DART_FILES" | grep -v -E "(lib/generated/|\.g\.dart$|\.freezed\.dart$|lib/l10n/generated/)")
-          
-          # Run custom linter only on changed files (excluding generated files)
-          if [ -z "$FILTERED_FILES" ]; then
-            echo "✅ No non-generated Dart files changed, skipping custom linter"
-          else
-            echo "🔍 Running custom linter (ripplearc_linter rules) on changed files..."
-            ALL_RULES="prefer_fake_over_mock,forbid_forced_unwrapping,no_optional_operators_in_tests,document_fake_parameters,document_interface,todo_with_story_links,no_internal_method_docs,specific_exception_types,avoid_test_timeouts,private_subject,sealed_over_dynamic"
-            fvm dart run ripplearc_linter:standalone_checker --rules $ALL_RULES $FILTERED_FILES
-          fi
+          chmod +x scripts/ci/run_code_analysis.sh
+          ./scripts/ci/run_code_analysis.sh "${CM_PULL_REQUEST_DEST:-main}" --full
 
       - name: Run Unit Tests With Coverage Report
         script: |
