Bring back the docker files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,8 @@
-version: '3.8'
+version: "3.8"
 services:
   flutter:
-    build:
-      context: .
-      args:
-        FLUTTER_VERSION: 3.32.0
+    build: .
     volumes:
       - ./test:/app/test
-      - ./lib:/app/lib
     stdin_open: true
     tty: true
