CA-410 add support for git for ssh users and add android tools

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,12 @@
-version: "3.8"
 services:
   flutter:
-    build: .
+    build:
+      context: .
+      args:
+        FLUTTER_VERSION: 3.32.0
     volumes:
       - ./test:/app/test
+      - ./lib:/app/lib
+      - ~/.ssh:/home/flutter/.ssh:ro
     stdin_open: true
     tty: true
