--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -34,9 +34,7 @@ custom_lint:
     - avoid_test_timeouts
     - private_subject
     - sealed_over_dynamic
-
-    # TODO: Fix violations and enable. See ticket: https://ripplearc.youtrack.cloud/issue/CA-446/Todo-Resolve-Avoid-static-colors-violations-on-Construculator-app
-    - avoid_static_colors: false
+    - avoid_static_colors
     - avoid_static_typography
 
 linter:
