docs: Add `lib/main.dart` to CODEOWNERS, assigning ownership to @SimonDerejeW. (#169)
* docs: Add `lib/main.dart` to CODEOWNERS, assigning ownership to @SimonDerejeW.

* R1: change it to @ripplearc/construculator-techlead

---------

Co-authored-by: Simon Dereje <simondereje1>

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -4,4 +4,5 @@ codemagic.yaml  @ripplearc/construculator-devop
 mutation_test_rules.xml @ripplearc/construculator-devop
 analysis_options.yaml @ripplearc/construculator-devop
 run_check.sh.yaml @ripplearc/construculator-devop
-lib/app/app_bootstrap.dart @ripplearc/construculator-devop
+lib/app/app_bootstrap.dart @ripplearc/construculator-techlead
+lib/main.dart @ripplearc/construculator-techlead
