--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -41,6 +41,7 @@ custom_lint:
     ast_type_prefixes:
         - 'Fake'
         - 'AppBootstrap'
+        - 'AppLogger'
 linter:
   # The lint rules applied to this project can be customized in the
   # section below to disable rules from the `package:flutter_lints/flutter.yaml`
