CA-482: Chore fix no direct instantiation violations (#178)
* Refactor data classes to extend Equatable

* feat: integrate AppLogger into estimation and auth modules

- Added AppLogger as a lazy singleton in EstimationModule, AuthLibraryModule, and AuthTestModule.
- Updated relevant classes to accept AppLogger as a dependency for improved logging capabilities.

* refactor: update classes to use AppLogger as a dependency

* extend Project class with Equatable

* refactor: integrate AppLogger into test files

* chore: update ripplearc_linter dependency to version 0.2.3 in pubspec.yaml and pubspec.lock

* chore: update analysis_options.yaml to refine custom lint rules and enable no_direct_instantiation

* feat: Added logic to the setCurrentUser method to emit authentication state changes based on user presence (signed in or signed out).

* feat: Enhance configuration module and update project repository initialization

* refactor: remove AppLogger dependency from auth_manager_test.dart and reset authNotifier before tests

* refactor: streamline app_config_test.dart by reusing appConfig instance and improving environment loader integration

* refactor: enhance app_config_test.dart by utilizing environment loader for configuration instantiation

* refactor: replace AppLogger with LoggingModule in estimation and auth library modules

* chore: add AppLogger to custom lint rules in analysis_options.yaml

* refactor: remove AppLogger dependency from estimation and auth modules, replacing it with static logger instances

* chore: add 'no_direct_instantiation' rule to custom linter configuration in run_code_analysis.sh

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -24,7 +24,7 @@ custom_lint:
     - prefer_fake_over_mock
     - forbid_forced_unwrapping
     - no_optional_operators_in_tests
-    - no_direct_instantiation: false
+    - no_direct_instantiation
     - document_fake_parameters
     - document_interface
     - todo_with_story_links
@@ -37,6 +37,11 @@ custom_lint:
     - avoid_static_colors
     - avoid_static_typography
 
+  no_direct_instantiation:
+    ast_type_prefixes:
+        - 'Fake'
+        - 'AppBootstrap'
+        - 'AppLogger'
 linter:
   # The lint rules applied to this project can be customized in the
   # section below to disable rules from the `package:flutter_lints/flutter.yaml`
