Refactor/return void for soft deletes to work (#176)
* CA-471: refactor: Update deleteEstimation methods to return void instead of CostEstimateDto

* refactor: Remove AuthBloc, events, states, and related tests (#177)

refactor: Update Authbloc dependencies in estimation pages and tets

Co-authored-by: Simon Dereje <simondereje1>

---------

Co-authored-by: Simon Dereje <simondereje1>

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -38,10 +38,13 @@ custom_lint:
     - avoid_static_typography
 
   no_direct_instantiation:
+    ignored_base_classes:
+        - 'State'
     ast_type_prefixes:
         - 'Fake'
         - 'AppBootstrap'
         - 'AppLogger'
+        - 'Map'
 linter:
   # The lint rules applied to this project can be customized in the
   # section below to disable rules from the `package:flutter_lints/flutter.yaml`
