--- a/flutter_launcher_icons-fishfood.yaml
+++ b/flutter_launcher_icons-fishfood.yaml
@@ -4,3 +4,9 @@ flutter_launcher_icons:
   android: true
   ios: true
   remove_alpha_channel_ios: true
+  min_sdk_android: 21
+  adaptive_icon_background: "#FFFFFF"
+  adaptive_icon_foreground: "assets/icons/app_icon_fishfood.png"
+  web:
+    generate: true
+    image_path: "assets/icons/app_icon_fishfood.png"
