--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,11 +62,8 @@ flutter:
     - assets/images/
 
 flutter_native_splash:
-  image: "assets/icons/splash_icon.png"
-  background_image: "assets/images/splash_bg.png"
+  color: "#015B7C"
   android: true
   ios: true
   android_12:
-    image: "assets/icons/splash_icon.png"
     color: "#015B7C"
-    icon_background_color: "#FFFFFF"
