R1: disable web icon generation for dogfood, fishfood, and prod flavors

--- a/flutter_launcher_icons-fishfood.yaml
+++ b/flutter_launcher_icons-fishfood.yaml
@@ -8,5 +8,5 @@ flutter_launcher_icons:
   adaptive_icon_background: "#FFFFFF"
   adaptive_icon_foreground: "assets/icons/app_icon_fishfood.png"
   web:
-    generate: true
+    generate: false
     image_path: "assets/icons/app_icon_fishfood.png"
